# SOC-Lab

./: .claude.md  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MPSReadme.md  Makefile  README.md  SECURITY.md  noxfile.py  pyproject.toml  requirements-audit.txt  spec.md
.github/: dependabot.yml
_MPS/: SKILLS.md  SYS_ARCHITECT.md  SYS_DEBUGGER.md  SYS_IMPLEMENTER.md  SYS_MEMORY_KEEPER.md  SYS_SKILL_LIBRARY.md
docs/: CURRENT_STATE.md  PLAN.md  SPECS.md  TASKS.md  architecture.md  attack-coverage.json  design.md  ir-report-nmap-recon.md  ir-report-priv-escalation.md  ir-report-ssh-brute-force.md  ir-report-suspicious-file.md  ir-report-vsftpd-exploit.md  portfolio-writeup.md  runbook.md  triage-methodology.md
evidence/: README.md
scripts/: 00-check-deps.sh  00-require-host-network.sh  01-onboard-kali-defense-agent.sh  02-deploy-wazuh-rules.sh  04-update-changelog-runbook.sh  05-verify-wazuh-syslog-listener.sh  06-verify-telemetry-sources.sh  07-run-scenario-05.sh  08-run-scenario-02.sh  09-run-scenario-01.sh  10-run-scenario-03.sh  11-run-scenario-04.sh  README.md
testbed/: CHANGELOG.md  (+5 more)
tools/: demo_enrich.py  enrich_alerts.py  pipeline_demo.py  pyproject.toml  report.py  sigma_convert.py
tools/fixtures/: sample_alerts.json  sample_enriched.json  sample_enriched.md
tools/sigma/: 01-nmap-recon.yml  02-ssh-brute-force.yml  03-vsftpd-exploit.yml  04-priv-escalation.yml  05-suspicious-file.yml
tools/tests/: test_demo_enrich.py  test_enrich.py  test_pipeline.py  test_pipeline_demo.py  test_report.py  test_sigma_convert.py
(+25 files in other folders)
