[project]
name = "soc-lab"
version = "0.0.0"
description = "SOC home lab automation tooling"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    "pip-audit>=2.7",
    "pyright>=1.1.390",
    "pytest>=7.4",
    "ruff>=0.9",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[tool.ruff]
src = ["tools"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
include = ["tools"]
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tools/tests"]
addopts = "-q"
